--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -17,7 +17,9 @@
 <body>
     <nav>
         <input type="checkbox" id="check">
-        <label for="check"></label>
+        <label for="check" class="checkbtn">
+            <i class="fa fas-bar"></i>
+        </label>
         <label class="logo">Food,LLC</label>
 
     </nav>
